Applied a number of findbugs hints