@@ -296,7 +296,7 @@ public class slkZipOutput implements ArtOutputInterface {
 	@Override
 	public void endLines() {
 		addCellString("Total rows retrieved:");
-		addCellLong(new Long(counter));
+		addCellLong(Long.valueOf(counter));
 		exportFileStrBuf.append("E");
 
 		try {
